Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release

2019-01-19 MWJ  3.2.001  OTA release
- New vehicle: Kia e-Niro (by Geir Øyvind Vælidalo <geir@validalo.net>)
- OTA: add option to allow scheduled auto updates via modem
  New config:
    ota [auto.allow.modem] = false
- Twizy web UI: tuning profile and drivemode button editors
- New vehicle: Smart ED (adaption by Martin Graml <martingraml@hotmail.com>)
- Web API: per access authorization by "apikey=password" parameter
- Web UI: text / script editor
- Web UI: user plugin support (pages & hooks)
- Twizy web UI: drivemode buttons secured & added to dashboard
- Twizy web UI: added file dialog for virtual dyno recording
- Web API scripting: /api/execute supporting GET & output control
- Web UI: night mode by URI parameter, e.g. "…/#/dashboard?nm=1"
- Web UI: dashboard accessible w/o login
- Web UI: added config backup & restore tool
- Web UI: file selector added for firmware flashing from SD
- Web UI: text notifications (info/error/alert) displayed as dialogs
- Twizy: SEVCON monitoring & recording
  New commands:
    xrt mon start [<filename>]
    xrt mon stop
    xrt mon reset
  New metrics:
    xrt.i.* = operational inverter data
    xrt.s.* = power & torque by speed (virtual dyno)
- Twizy: experimental powermap calculation including region 3 / breakdown torque
  New config:
    xrt [motor_trq_breakdown] = 0     Breakdown torque in Nm, e.g. 210.375
    xrt [motor_rpm_rated] = 0         Rated speed in rpm, e.g. 2100
  See docs/Renault-Twizy/Twizy-Powermap-Calculator-Tbrk.ods for details.
- Add inactivity watchdog timers to CAN buses
- NissanLeaf: Fix for 0% SOH on 30KWh models with Nissan BMS update
- Introduction of support for DBC CAN bus configuration files
- Javascript: New modular framework, and migration of all extensions to objects
- Mitsubishi i-MiEV OVMS3 rewrite

2018-10-24 MWJ  3.1.011  OTA release
- Config backup & restore using encrypted ZIP archives